--- a/content/1.index.md
+++ b/content/1.index.md
@@ -12,7 +12,7 @@ announcement:
   - /blog/announcing-v2
 cta:
   - Discord
-  - /get-started
+  - https://discord.gg/UN8mqgC79S
 secondary:
   - Follow on Twitter
   - https://twitter.com/productdevbook
@@ -32,39 +32,39 @@ Powerful Features
 #default
   ::card
   ---
-  icon: simple-icons:nuxtdotjs
-  title: Built for Nuxt 3
-  description: 'Take advantage of Nuxt 3 features: Vue 3, Auto-imports, Vite and Nitro server.'
+  icon: mdi-source-repository
+  title: Built for NestJS, Vue 3, Vite, Capacitor
+  description: 'Take advantage of Typescript features: Vue 3, Vite, Capacitor Mobile App and GraphQL Api'
   ---
   ::
 
   ::card
   ---
-  icon: ph:file
-  description: Write your content in Markdown, YML, CSV or JSON and query it in your components.
-  title: File-based CMS
+  icon: mdi-graphql
+  title: GraphQL Api
+  description: 'The whole structure leveraged the power of GraphQL and integrated them with Typescript.'
   ---
   ::
 
   ::card
   ---
-  icon: ph:funnel
-  title: Query Builder
-  description: Query your content with a MongoDB-like API to fetch the right data at the right time.
+  icon: iconoir-packages
+  title: Packages
+  description: Special libraries that you can use between mobile and web have been built
   ---
   ::
   ::card
   ---
-  icon: IconMarkdown
-  title: MDC Syntax
-  description: Use your Vue components in Markdown files, supporting props, slots and nested components.
+  icon: ph-lightning-duotone
+  title: DX
+  description: We thought and developed all the places where we would waste a lot of time while coding. There is magic in some places.
   ---
   ::
   ::card
   ---
-  icon: ph:scan
-  title: Code highlighting
-  description: Display beautiful code blocks in your website with the Shiki integration supporting VS Code themes.
+  icon: ph-download-duotone
+  title: Lifetime updates
+  description: I will continue the maintenance, deficiencies and library updates of the monorepo.
   ---
   ::
 
@@ -72,18 +72,7 @@ Powerful Features
   ---
   icon: ph:rocket-launch
   title: Deploy everywhere.
-  description: Nuxt Content support both Static or Node server hosting.
+  description: With special video narrations and documentation, you will be able to publish your products in life without any problems.
   ---
   ::
 
-#root
-:ellipsis
-::
-
-::container{padded .py-8 .mb-8 .flex .items-center .justify-center}
-
-  ::button-link{href="/content-v1" type="base"}
-  Looking for v1 documentation ?
-  ::
-
-::
