--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,6 +1,6 @@
 ---
-title: "Content made easy for Vue developers"
-description: "The file-based CMS for your Nuxt application, powered by Markdown and Vue components."
+title: "Product development easy for Full Stack Developers"
+description: "Typescripte monorepo solution powered by Nest JS, Vue, Capacitor and Ionic components for your software application."
 navigation: false
 layout: fluid
 ---
@@ -22,7 +22,7 @@ secondary:
 Product development easy for Full Stack Developers
 
 #description
-The productdevook-monorepo is a monorepo solution set up and communicating with each other in the project by `NestJS`, `Vue`, `Capacitor/Ionic` to create a powerful management layer for your application. It speeds up our 1-year search and knowledge base. In this way, you quickly start coding an API, website, and mobile application. Use monorepo used with the [Turborepo](https://turborepo.org/).
+The productdevbook-monorepo is a monorepo solution set up and communicating with each other in the project by `NestJS`, `Vue`, `Capacitor/Ionic` to create a powerful management layer for your application. It speeds up our 1-year search and knowledge base. In this way, you quickly start coding an API, website, and mobile application. Use monorepo used with the [Turborepo](https://turborepo.org/).
 ::
 
 ::card-grid
@@ -41,7 +41,7 @@ Powerful Features
   ::card
   ---
   icon: mdi-graphql
-  title: GraphQL Api
+  title: GraphQL API
   description: 'The whole structure leveraged the power of GraphQL and integrated them with Typescript.'
   ---
   ::
