feat: nestjs, vue and mobile app features

--- a/content/2.test/1.index.md
+++ b/content/2.test/1.index.md
@@ -34,6 +34,7 @@ Powerful Features
   ---
   icon: mdi-source-repository
   title: Built for NestJS, Vue 3, Vite, Capacitor
+  navTitle: 'Home'
   description: 'Take advantage of Typescript features: Vue 3, Vite, Capacitor Mobile App and GraphQL Api'
   ---
   ::
@@ -75,4 +76,3 @@ Powerful Features
   description: With special video narrations and documentation, you will be able to publish your products in life without any problems.
   ---
   ::
-
