--- a/content/4.community/1.index.md
+++ b/content/4.community/1.index.md
@@ -2,7 +2,7 @@
 layout: docs
 toc: false
 title: Releases
-description: Discover the latest Nuxt Tailwind CSS updates.
+description: Discover the latest Product Dev Book updates.
 ---
 
 ::releases
